# FastAPI_Learning

./: .gitignore  .sql  .tldr  index.html  local_llm.py  pyproject.toml  requiments.txt  tatus
Learning/: database.db  structure.txt
Learning/app/: app.py  model.py  show_database.py
Learning/templates/: form.html
project1/: .env
project1/app/: app.py  db.py  schemas.py
project2/: create_all_batches.py  create_all_classes.py  data.json  data.txt  debug_db.py  debug_search.py  fix_data_json.py  index.html  main.py  requiments.txt  requirements.txt  runner.py  test.db  testfile.json  testfile.py  user_create.py
project2/app/: .env  app.py  database.py  function.py  model.py  models.py  otp_sender.py  schemas.py  try.py
project2/app/core/: config.py  dependencies.py
project2/app/database/: session.py
project2/app/models/: __init__.py  attendance.py  batches.py  classes.py  fees.py  otp.py  student.py  subjects.py  teacher.py  user.py
project2/app/routers/: attendance.py  auth.py  dashboard.py  teacher.py
project2/app/schemas/: __init__.py  attendance.py  fees.py  (+4 more)
project2/create_folder/: attendance_record_create.py  classes_create.py  fees_creater.py  fees_status_updater.py  student_data.py  teacher_create.py  user_create.py
project2/routers/: attendance.py
project2/styles/: style.css
project2/template/: login_page.html  register_page.html
project2/templates/: dashboard.html  login_page.html  login_success.html  otp_send_page.html  register_page.html  teacher_class_details.html  teacher_classes.html  teacher_dashboard.html  teacher_students.html
(+18 files in other folders)
